<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/cleanupx_shape_dialog_bg"
        android:layout_width="365dp"
        android:layout_height="311dp">


        <TextView
            android:id="@+id/exit_title"
            android:text="@string/exit_dialog_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="34dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center"
            android:background="@drawable/cleanupx_shape_exit_content_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:lineSpacingExtra="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/exit_dialog_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/exit_title"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/exit_confirm_tv"
            android:text="@string/exit_dialog_exit"
            android:textSize="17sp"
            android:textColor="@color/CleanUpx_font"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="17dp"
            android:layout_width="127dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/exit_cancel_tv"
            android:text="@string/exit_dialog_continue"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/cleanupx_shape_welcome_go_bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="17dp"
            android:layout_width="127dp"
            android:layout_height="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
