<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--蒙层-->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="311dp"
        android:layout_height="476dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/content_bg"
            android:src="@drawable/cleanupx_shape_dialog_bg"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="436dp"/>

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_dialog_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/welcome_dialog_content"
            android:textColor="@color/CleanUpx_font"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

        <ImageView
            android:id="@+id/welcome_content_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/cleanupx_welcome_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_content" />


        <TextView
            android:id="@+id/welcome_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/welcome_dialog_instructions"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_content_iv" />

        <TextView
            android:id="@+id/welcome_remove_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:drawableLeft="@drawable/cleanupx_remove_tips"
            android:drawablePadding="3dp"
            android:text="@string/welcome_dialog_remove_tips"
            android:textColor="@color/CleanUpx_font"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_instructions" />

        <TextView
            android:id="@+id/welcome_keep_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/cleanupx_keep_tips"
            android:drawablePadding="3dp"
            android:text="@string/welcome_dialog_keep_tips"
            android:textColor="@color/CleanUpx_font"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/welcome_remove_tips"
            app:layout_constraintTop_toBottomOf="@id/welcome_remove_tips" />

        <Button
            android:id="@+id/welcome_go_btn"
            android:layout_width="271dp"
            android:layout_height="39dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/cleanupx_shape_welcome_go_bg"
            android:text="@string/welcome_dialog_go"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_keep_tips" />

        <TextView
            android:id="@+id/welcome_clean_up_size"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_dialog_clean_up_size"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_go_btn" />


        <ImageView
            android:id="@+id/welcome_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/cleanupx_welcome_close"
            app:layout_constraintTop_toBottomOf="@id/content_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>