<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_title_root"
            android:background="?colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <ImageView
                android:id="@+id/result_back"
                android:src="@drawable/cleanupx_icon_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:padding="3dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>

            <TextView
                android:id="@+id/result_title"
                android:text="@string/result_title"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginLeft="4dp"
                app:layout_constraintTop_toTopOf="@id/result_back"
                app:layout_constraintBottom_toBottomOf="@id/result_back"
                app:layout_constraintLeft_toRightOf="@id/result_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_content_root"
            app:layout_constraintTop_toBottomOf="@+id/result_title_root"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="138dp">

            <TextView
                android:id="@+id/result_content_title"
                android:text="@string/result_content_tips"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/result_content_icon"
                android:src="@drawable/cleanupx_gallery_result_icon"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/result_content_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="34dp"
                android:layout_height="34dp"/>

            <TextView
                android:id="@+id/result_content_tv"
                android:text="@string/result_content"
                android:textColor="#333333"
                android:textSize="13sp"
                android:layout_marginLeft="15dp"
                app:layout_constraintTop_toTopOf="@id/result_content_icon"
                app:layout_constraintBottom_toBottomOf="@id/result_content_icon"
                app:layout_constraintLeft_toRightOf="@id/result_content_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/result_go_gallery_btn"
                android:text="@string/result_content_again"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/cleanupx_shape_welcome_go_bg"
                android:layout_marginBottom="17dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
