<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preview_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/gallery_recycler"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery_recycler"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="134dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/album_icon"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/cleanupx_album" />

            <TextView
                android:id="@+id/bucket_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:shadowColor="#ff666666"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:text="@string/album_classify"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="#b3000000"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="24dp">

                <RelativeLayout
                    android:id="@+id/back"

                    android:layout_width="53dp"   android:contentDescription="@string/string_back"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cleanupx_icon_back" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/recycle_icon"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cleanupx_gallery_delete_icon" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/cleanupx_shape_black"
                    android:drawableLeft="@drawable/cleanupx_hands_up"
                    android:drawablePadding="9dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp"
                    android:text="@string/gallery_swipe_up_to_delete_pictures"
                    android:textColor="#ffffff"
                    android:textSize="19sp" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="226dp"
                android:layout_height="149dp"
                android:scaleType="center"
                android:src="@drawable/cleanupx_gallery_empty_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_null"
                android:textColor="#999999"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>